# openbrain

./: .gitignore  .gitleaks.toml  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PR_ITER2.md  README.md  TRADEMARK.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
crates/openbrain-core/: Cargo.toml
crates/openbrain-core/src/: lib.rs  query.rs  textnorm.rs
crates/openbrain-embed/: Cargo.toml
crates/openbrain-embed/src/: lib.rs  local_http.rs  openai.rs
crates/openbrain-embed/tests/: openai_live.rs
crates/openbrain-llm/: Cargo.toml
crates/openbrain-llm/src/: anthropic.rs  lib.rs
crates/openbrain-llm/tests/: anthropic_live.rs
crates/openbrain-server/: Cargo.toml
crates/openbrain-server/src/: auth.rs  embed_cli.rs  governance_cli.rs  lib.rs  main.rs  mcp.rs  policy.rs  service.rs  shadow_cli.rs
crates/openbrain-server/static/viewer/: app.js  index.html  styles.css
crates/openbrain-server/tests/: http_api.rs  idempotency_parity.rs  mcp_stdio.rs  parity_ping.rs
crates/openbrain-store/: Cargo.toml
crates/openbrain-store/src/: lib.rs  pg.rs
crates/openbrain-store/tests/: embed_generate.rs  idempotency.rs  pg_store.rs  reembed_coverage.rs  search_semantic.rs  search_structured.rs
crates/openbrain-tests/: Cargo.toml
crates/openbrain-tests/src/: lib.rs
docs/demo/: governance_demo.md  local_compose_quickstart.md  memory_pack_demo_kit.md  reembed_coverage_quickstart.md  shadow_mode_quickstart.md  web_viewer_quickstart.md
docs/demo/fixtures/: transcript_demo.txt
docs/pack/: OpenBrain_Enterprise_Spec.md  OpenBrain_Feature_Inventory.md  OpenBrain_Operations_Runbook.md  README.md
docs/pack/word/: OpenBrain_Enterprise_Spec.docx  OpenBrain_Feature_Inventory.docx  OpenBrain_Operations_Runbook.docx
docs/release/: COMPATIBILITY.md  RELEASE_NOTES_v1.0.0.md  RELEASING.md
docs/specs/: idempotency_write_receipts.md  memory_pack_budgeting.md
migrations/: 0001_init.sql  0002_embeddings_provider_kind.sql  0003_workspace_access.sql  0004_memory_lifecycle.sql  0005_idempotency_ledger.sql
scripts/: demo.ps1  demo.sh  demo_memory_pack.ps1  demo_memory_pack.sh
scripts/ci/: quality-gates.ps1  quality-gates.sh
sdk/python/openbrain_sdk/: README.md  pyproject.toml
sdk/python/openbrain_sdk/examples/: http.py  http_e2e.py  mcp.py  mcp_e2e.py
sdk/python/openbrain_sdk/openbrain_sdk/: __init__.py  client.py  error.py  mcp.py  models.py
sdk/python/openbrain_sdk/openbrain_sdk/tests/: fake_mcp_server.py  test_http.py  test_mcp.py
sdk/typescript/openbrain-sdk/: README.md  package.json  tsconfig.json
sdk/typescript/openbrain-sdk/examples/: http.ts  http_e2e.ts  mcp.ts  mcp_e2e.ts
sdk/typescript/openbrain-sdk/src/: error.ts  http.ts  index.ts  mcp.ts  types.ts
sdk/typescript/openbrain-sdk/tests/: fake-mcp-server.mjs  http.test.ts  mcp.test.ts
