[package]
name = "openbrain-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "openbrain"
path = "src/main.rs"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
openbrain-core = { path = "../openbrain-core" }
openbrain-embed = { path = "../openbrain-embed" }
openbrain-store = { path = "../openbrain-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "migrate"] }


