[build-system]
requires = ["setuptools>=68.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openbrain-sdk"
version = "1.0.0"
description = "Python SDK for OpenBrain HTTP and MCP interfaces"
license = { text = "Apache-2.0 OR MIT" }
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/rinfa0108/openbrain"

[project.optional-dependencies]
test = ["pytest>=8.0"]
